--- a/manifest.json
+++ b/manifest.json
@@ -27,5 +27,11 @@
             "background.js"
         ],
         "persistent": false
+    },
+    
+    "icons": {
+        "16": "icon16.png",
+        "48": "icon48.png",
+        "128": "icon128.png"
     }
 }
