--- a/manifest.json
+++ b/manifest.json
@@ -28,7 +28,13 @@
         ],
         "persistent": false
     },
-    
+
+    "browser_action": {
+        "default_icon": {
+          "19": "icon19.png"
+        }
+    },
+
     "icons": {
         "16": "icon16.png",
         "48": "icon48.png",
